# fundamentals_scraping

./: .gitignore  README.md  deep_learning_test.py  deep_learning_test2.py  main.py  pyproject.toml
files/sample/: S100N6OL.xbrl  column.json  column_consolidated.json  column_nonconsolidated.json  sample.csv
utility/: bs.py  data.py  document.py  file.py
